--- a/login.html
+++ b/login.html
@@ -35,6 +35,10 @@
                         <button type="submit" class="btn btn-success btn-lg mb-5 d-grid gap-2 col-6 mx-auto"
                             style="width: 200px; height:50px">Submit</button>
 
+                        <h5 class="mb-5  col-6 mx-5">Not a member?<a class="btn btn-light" href="#" role="button"><a
+                                    href="index.html">Sign up</a></h5>
+
+
                         </form>
 
                     </div>
